<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attribute="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:ignore="MissingPrefix">

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="false"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="2dp"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_anchorGravity="bottom|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <android.support.v7.widget.CardView
                    android:id="@+id/interest_card"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"

                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/i_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/specials"
                            android:textColor="#ccc"
                            android:textStyle="bold" />



                     <!--   <android.support.v7.widget.RecyclerView
                            android:id="@+id/interest_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/i_label"
                            android:padding="10dp" />-->
                        <com.adroitandroid.chipcloud.ChipCloud
                            xmlns:chipcloud="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/chip_cloud"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/i_label"
                            android:padding="10dp"

                            chipcloud:deselectedColor="@color/light_grey"
                            chipcloud:deselectedFontColor="@color/mt_black"
                            chipcloud:selectedColor="@color/dark_grey"
                            chipcloud:selectedFontColor="#fff"
                            chipcloud:deselectTransitionMS="500"
                            chipcloud:selectTransitionMS="750"
                            chipcloud:selectMode="required"
                            chipcloud:allCaps="true"
                            chipcloud:gravity="staggered"
                            chipcloud:minHorizontalSpacing="25dp"
                            chipcloud:verticalSpacing="10dp"
                            chipcloud:textSize="12sp"
                            />
                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/spec_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="bottom|end"
                            android:layout_margin="15dp"
                            android:visibility="visible"
                            app:fabSize="mini"
                            app:srcCompat="@drawable/ic_action_edit" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>


                <!--FRIENDS-->
                <android.support.v7.widget.CardView
                    android:id="@+id/friends_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/interest_card"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/friend_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/currents_txt"
                            android:textColor="#ccc"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/friends_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/friend_label"
                            android:padding="10dp" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/friend_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="bottom|end"
                            android:layout_margin="15dp"
                            android:visibility="gone"
                            app:fabSize="mini"
                            app:srcCompat="@drawable/ic_arrow_drop_down_white_24dp" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>


                <!--FAVS-->

                <android.support.v7.widget.CardView
                    android:id="@+id/fav_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/friends_card"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/f_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/recent_jobs"
                            android:textColor="#ccc"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/favorites_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/f_label"
                            android:padding="10dp" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>
<!--Events-->
                <android.support.v7.widget.CardView
                    android:id="@+id/event_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fav_card"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/e_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/my_jobs"
                            android:textColor="#ccc"
                            android:textStyle="bold" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/myevents_layout"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_below="@+id/e_label"
                            android:padding="10dp" />
                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/add_job_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="bottom|end"
                            android:layout_margin="15dp"
                            android:visibility="visible"
                            app:fabSize="mini"
                            app:srcCompat="@drawable/ic_action_add" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/event_card"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom|center"
                    android:layout_margin="@dimen/fab_margin"
                    android:background="@drawable/red_button"
                    android:elevation="2dp"
                    android:text="@string/log_out"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </RelativeLayout>


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/city_rain" />

                <FrameLayout
                    android:id="@+id/pic_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerInParent="true"
                        android:layout_margin="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/guy"
                        attribute:civ_border_color="#FF000000"
                        attribute:civ_border_width="0dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:padding="2dp"
                        android:visibility="visible"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_gallery" />
                </FrameLayout>

               <!-- <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="12dp"
                    android:id="@+id/remove_button"
                    android:layout_marginEnd="12dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/remove_ads_button"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_action_loyalty"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Remove Ads"
                        android:layout_below="@+id/remove_ads_button"
                        android:layout_gravity="bottom|center_horizontal"/>
                </RelativeLayout>
-->
                <TextView
                    android:id="@+id/user_name"
                    fontPath="fonts/Comfortaa-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pic_frame"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom|center_horizontal"
                    android:fontFamily="sans-serif"
                    android:shadowColor="#000"
                    android:shadowRadius="1"
                    android:text="User"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/settings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="15dp"

                    android:tint="@color/colorAccent"
                    android:visibility="gone" />


            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                android:visibility="visible"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>
